# attackIQ

./: AiqCurlWrapper.cpp  AiqCurlWrapper.h  AiqTranslationServer.cpp  AiqTranslationServer.h  CMakeLists.txt  README.md  main.cpp
pythonClient/: aiq_client.py  aiq_server_pb2.py  aiq_server_pb2_grpc.py
schema/protos/: aiq_server.proto
